--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "@vitest/ui": "^4.0.16",
     "autoprefixer": "^10.4.23",
     "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "jsdom": "^27.4.0",
     "playwright": "^1.57.0",
     "postcss": "^8.5.6",
+    "prettier": "^3.7.4",
     "sharp": "^0.34.5",
     "svgo": "^4.0.0",
     "tailwindcss": "^3.4.17",
